# leveraging_azure_for_real_time_city_bike_data_streaming_and_analytics

./: .gitignore  README.md  create_db_and_tables.sql  etl_networks.py  extract_and_stream_networks.py  extract_and_stream_stations.py  fetch_and_consume_bike_networks.py  fetch_and_consume_bike_stations.py  fetch_and_consume_weather_api.py  pyproject.toml  sample.py  sample_2.py  transform_stations.py  upsert_from_staging.sql  utils.py
create_tables/: create_all_tables.py  create_all_tables.sql
documentation/: documentation.md
etl_stations/: extract_stations.py  main_stations.py  transform_stations.py
etl_weather/: extract_coordinates.py  extract_street.py  extract_weather.py  main_weather.py  transform_weather.py
sample/: extract_and_stream_networks.ipynb
sample_data/: sample_networks.json  sample_stations.json  sample_weather.json
scripts/: run_etl_networks.py  run_weather_etl.py
scripts/etl_stations/: fetch_and_consume_bike_stations.py  run_stations_etl.py  transform_stations.py
tests/: test.py
